found an issue in firefox where the figcaption was visible when the image flipped, attempting to adress this with backface visibility on the figcaption

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,6 +398,9 @@ p {
     color: var(--whitetext);
     z-index: 2;
     font-size: 170%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
 }
 
 .courses-figcaption-backside {
